CHATS_SIT/force-app/main/default/objects/batchdev_t_indiv_rat_fees__x.object
<CustomObject>
    <description>batchdev$t_indiv_rat_fees</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchdev$t_indiv_rat_fees</externalName>
    <fields>
        <fullName>amt_act_paid__c</fullName>
        <description>amt_act_paid</description>
        <externalDeveloperName>amt_act_paid</externalDeveloperName>
        <label>Activity Fee Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_act_remaining__c</fullName>
        <description>amt_act_remaining</description>
        <externalDeveloperName>amt_act_remaining</externalDeveloperName>
        <label>Remaining Activity Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_reg_paid__c</fullName>
        <description>amt_reg_paid</description>
        <externalDeveloperName>amt_reg_paid</externalDeveloperName>
        <label>Registration Fee Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_reg_remaining__c</fullName>
        <description>amt_reg_remaining</description>
        <externalDeveloperName>amt_reg_remaining</externalDeveloperName>
        <label>Remaining Registration Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_trans_paid__c</fullName>
        <description>amt_trans_paid</description>
        <externalDeveloperName>amt_trans_paid</externalDeveloperName>
        <label>Transportation Fee Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_trans_remaining__c</fullName>
        <description>amt_trans_remaining</description>
        <externalDeveloperName>amt_trans_remaining</externalDeveloperName>
        <label>Remaining Transportation Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>child_name__c</fullName>
        <externalDeveloperName>child_name</externalDeveloperName>
        <label>Child Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchdev_t_indiv_rat_fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_care__c</fullName>
        <description>dte_care</description>
        <externalDeveloperName>dte_care</externalDeveloperName>
        <label>Care Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_paid__c</fullName>
        <description>dte_paid</description>
        <externalDeveloperName>dte_paid</externalDeveloperName>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_adjmt__c</fullName>
        <description>idn_adjmt</description>
        <externalDeveloperName>idn_adjmt</externalDeveloperName>
        <label>Adjustment Id</label>
        <length>50</length>
        <referenceTargetField>T_ADJMT__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_ADJMT__c</referenceTo>
        <relationshipLabel>batchdev$t_indiv_rat_fees</relationshipLabel>
        <relationshipName>batchdev_t_indiv_rat_fees</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_auth__c</fullName>
        <description>idn_auth</description>
        <externalDeveloperName>idn_auth</externalDeveloperName>
        <label>Authorization Id</label>
        <length>50</length>
        <referenceTargetField>T_AUTH__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipLabel>batchdev$t_indiv_rat_fees</relationshipLabel>
        <relationshipName>batchdev_t_indiv_rat_fees</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Individual ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_INDIV__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>batchdev$t_indiv_rat_fees</relationshipLabel>
        <relationshipName>batchdev_t_indiv_rat_fees</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_fiscal_rat_fee__c</fullName>
        <label>RAT Fees External Id</label>
        <length>50</length>
        <referenceTargetField>T_FISCAL_RAT_FEES__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_FISCAL_RAT_FEES__c</referenceTo>
        <relationshipLabel>batchdev$t_indiv_rat_fees</relationshipLabel>
        <relationshipName>batchdev_t_indiv_rat_fees</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_indiv_rat_fee__c</fullName>
        <description>idn_indiv_rat_fee</description>
        <externalDeveloperName>idn_indiv_rat_fee</externalDeveloperName>
        <label>idn_indiv_rat_fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_provr__c</fullName>
        <description>idn_provr</description>
        <externalDeveloperName>idn_provr</externalDeveloperName>
        <label>Provider Id</label>
        <length>50</length>
        <referenceTargetField>T_CHATS_PROVR_STATUS__c.External_ID__c</referenceTargetField>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>batchdev$t_indiv_rat_fees</relationshipLabel>
        <relationshipName>batchdev_t_indiv_rat_fees</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchdev_t_indiv_rat_fees2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
     <fields>
        <fullName>dte_begin_effev__c</fullName>
		<description>Effective Begin Date</description>
		<externalDeveloperName>dte_begin_effev</externalDeveloperName>
		<label>Effective Begin Date</label>
		<type>Date</type>
    </fields>
    <fields>
        <fullName>dte_end_effev__c</fullName>
		<description>Effective End Date</description>
		<externalDeveloperName>dte_end_effev</externalDeveloperName>
		<label>Effective End Date</label>
		<type>Date</type>
    </fields>
    <label>Current Utilization Detail</label>
    <pluralLabel>Current_Utilization_Details</pluralLabel>
</CustomObject>